# MicroProjects

./: .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: release.yml  test_check50.yml
calculator/: README.md  __init__.py  lexical_analyzer.py  main.py
calculator/tests/pytest/: test_examples.py  test_fishchecks.py
microprojects/calc/: __init__.py  analyzer.py  calculator.py
microprojects/calc/tests/check50/: __init__.py
microprojects/calc/tests/pytest/: test_examples.py  test_fishchecks.py
microprojects/ngit/: README.md  commit.py  index_entry.txt  kvlm.py  libngit.py  log.py  ls_tree.py  ngit_utils.py  object.py  object_utils.py  repository.py  status.py  tree.py
