[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"


[project]
name = "microprojects"
description = "MicroProjects in Python"
version = "0.1.2"
keywords = ["microprojects", "ideas", "project ideas", "calculator"]
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">= 3.10"
dependencies = []
authors = [
  {name = "Nyx", email = "241463@students.au.edu.pk"},
]
maintainers = [
  {name = "Nyx", email = "241463@students.au.edu.pk"},
]
classifiers = [
  # How mature is this project?
  "Development Status :: 4 - Beta",
  "Typing :: Typed",
  "Operating System :: OS Independent",
  "Natural Language :: English",
  "Environment :: Console",

  # Indicate who your project is intended for
  "Intended Audience :: Developers",
  "Topic :: Education",
  "Topic :: Software Development",
  "Topic :: Software Development :: Version Control",
  "Topic :: Software Development :: Version Control :: Git",
  "Topic :: Utilities",


  # Specify the Python versions you support here.
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: 3.15",
  "License :: OSI Approved :: GNU General Public License (GPL)",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
]


[project.urls]
Documentation = "https://github.com/nyx-4/MicroProjects/wiki"
Repository = "https://github.com/nyx-4/MicroProjects"
Issues = "https://github.com/nyx-4/MicroProjects/issues"
Changelog = "https://github.com/nyx-4/MicroProjects/blob/main/CHANGELOG.md"
DOWNLOAD = "https://pypi.org/project/microprojects/#files"


[project.scripts]
calc = "microprojects:calc_main"
ngit = "microprojects:ngit_main"


[project.optional-dependencies]
gui = []
cli = []


[tool.pytest.ini_options]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-q"


[tool.hatch.build.targets.wheel]
packages = ["microprojects"]

[tool.ruff]
line-length = 88


[tool.ruff.format]
indent-style = "space"
line-ending = "lf"
docstring-code-format = true


[tool.ruff.lint]
ignore = ["F401"]
